fix: remove duplicate left scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ body {
 }
 
 body {
-  direction: rtl;
+  direction: ltr;
   min-height: 100vh;
   min-height: 100svh;
   min-height: 100dvh;
